--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "framer-motion": "^11.0.6",
+    "headlessui": "^0.0.0",
+    "heroicons": "^2.1.1",
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -23,7 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
