--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@types/node": "^20",
