--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.0.6",
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.3",
+    "lucide-react": "^0.364.0",
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
