--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@usehall/react": "^0.2.0",
+    "axios": "^1.6.8",
     "framer-motion": "^11.0.6",
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.3",
