--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.6",
+    "geist": "^1.3.0",
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.3",
     "lucide-react": "^0.364.0",
