--- a/package.json
+++ b/package.json
@@ -15,19 +15,20 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@usehall/react": "^0.2.0",
     "axios": "^1.6.8",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.6",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.7",
     "geist": "^1.3.0",
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.3",
     "lucide-react": "^0.364.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "sonner": "^1.4.41",
-    "tailwind-merge": "^2.2.2"
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
