--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@tabler/icons-react": "^3.3.0",
     "@usehall/react": "^0.2.0",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
