--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ebay/nice-modal-react": "^1.2.13",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@tabler/icons-react": "^3.3.0",
     "@usehall/react": "^0.2.0",
@@ -28,6 +29,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-scroll": "^1.9.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0"
   },
