--- a/package.json
+++ b/package.json
@@ -13,27 +13,41 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@tabler/icons-react": "^3.3.0",
     "@usehall/react": "^0.2.0",
     "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.1.7",
     "geist": "^1.3.0",
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.3",
     "lucide-react": "^0.364.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "^14.1.0",
+    "next": "^13.5.6",
+    "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "react-tweet": "^3.2.1",
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.13.1",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^3.0.1",
     "sonner": "^1.4.41",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "unified": "^11.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
