--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "postbuild": "next-sitemap",
     "build": "contentlayer build && next build",
     "start": "next start",
     "lint": "next lint"
@@ -30,6 +31,7 @@
     "mini-svg-data-uri": "^1.4.4",
     "next": "^13.5.6",
     "next-contentlayer": "^0.3.4",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
