--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.1.7",
     "geist": "^1.3.0",
+    "github-slugger": "^2.0.0",
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.3",
     "lucide-react": "^0.364.0",
+    "mdast": "^3.0.0",
+    "mdast-util-to-string": "^4.0.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^13.5.6",
     "next-contentlayer": "^0.3.4",
@@ -42,11 +45,14 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.13.1",
     "rehype-slug": "^6.0.0",
+    "remark": "^15.0.1",
     "remark-gfm": "^3.0.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "unified": "^11.0.4"
+    "unified": "^11.0.4",
+    "unist-util-visit": "^5.0.0",
+    "vfile": "^6.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
