--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "1.0.7",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tabler/icons-react": "^3.3.0",
     "@usehall/react": "^0.2.0",
     "axios": "^1.6.8",
