--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^3.0.1",
+    "rough-notation": "^0.5.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
