--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
 		"tailwindcss-animate": "^1.0.7",
 		"unified": "^11.0.4",
 		"unist-util-visit": "^5.0.0",
-		"vfile": "^6.0.1"
+		"vfile": "^6.0.1",
+		"@toolbird/web": "^0.1.1"
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.13",
