--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@radix-ui/react-popover": "1.0.7",
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@tabler/icons-react": "^3.3.0",
+		"@toolbird/web": "^0.1.1",
 		"@usehall/react": "^0.2.0",
 		"axios": "^1.6.8",
 		"class-variance-authority": "^0.7.0",
@@ -59,8 +60,7 @@
 		"tailwindcss-animate": "^1.0.7",
 		"unified": "^11.0.4",
 		"unist-util-visit": "^5.0.0",
-		"vfile": "^6.0.1",
-		"@toolbird/web": "^0.1.1"
+		"vfile": "^6.0.1"
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.13",
