--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
 		"@ebay/nice-modal-react": "^1.2.13",
 		"@headlessui/react": "^1.7.18",
 		"@heroicons/react": "^2.1.1",
+		"@hookform/resolvers": "^3.6.0",
 		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-navigation-menu": "^1.1.4",
 		"@radix-ui/react-popover": "1.0.7",
 		"@radix-ui/react-tooltip": "^1.0.7",
@@ -43,6 +45,7 @@
 		"next-sitemap": "^4.2.3",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-hook-form": "^7.52.0",
 		"react-hot-toast": "^2.4.1",
 		"react-icons": "^5.2.1",
 		"react-infinite-logo-slider": "^1.0.13",
