--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"postbuild": "next-sitemap",
-		"build": "contentlayer build && next build",
+		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
 	},
@@ -29,7 +29,6 @@
 		"axios": "^1.6.8",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
-		"contentlayer": "^0.3.4",
 		"date-fns": "^3.6.0",
 		"framer-motion": "^11.2.4",
 		"geist": "^1.3.0",
